Source/IntegrationTests/TestFiles/LitTests/LitTest/dafny0/snapshots/Inputs/Snapshots1.v1.dfy
method M()
{
  N();
  assert false;  // error
}

method N()
  ensures P();

predicate P()
{
  true
}
